--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href='./dist/main.css' rel='stylesheet' />
-  <script src='./dist/main.js'></script>
+  <script media="print" src='./dist/main.js'></script>
 
 </head>
 
