Create transition to appear calendar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </nav>
-  <section class="hidden">
+  <section class="section">
     <div id='calendar' style="margin: 40px 10px;"></div>
   </section>
 
