--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
   <section class="section">
-    <div id='calendar' style="margin: 40px 10px;"></div>
+    <div id='calendar'></div>
   </section>
 
 </body>
