--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@
           <h1>Anthony Bouillant</h1>
         </div>
         <div class="menu-items">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">blogs</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">contact</a></li>
+          <div class="square"><a href="#"><b>MY CPNV</b></a></div>
+          <br>
+          <ul>
+            <li><i class="far fa-calendar"></i><a href="#">Calendriers</a></li>
+            <li><i class="fas fa-info-circle"></i><a href="#">Informations</a></li>
+            <li><i class="far fa-file-alt"></i><a href="#">Documents</a></li>
+            <li><i class="fas fa-list-ol"></i><a href="#">Listes</a></li>
+            <li><i class="fas fa-cog"></i><a href="#">Paramètres</a></li>
+          </ul>
+
         </div>
       </div>
     </div>
@@ -37,6 +42,8 @@
   <section class="section">
     <div id='calendar'></div>
   </section>
+
+  <div id='calendar'></div>
 
 </body>
 
