--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>GUI1</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href='./dist/main.css' rel='stylesheet' />
-  <script media="print" src='./dist/main.js' defer></script>
+  <link href='./dist/style/mainApp.css' rel='stylesheet' />
+  <script media="print" src='./dist/js/mainApp.js' defer></script>
 </head>
 
 <body>
