--- a/src/html/absences.html
+++ b/src/html/absences.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href='./../../dist/style/absencesApp.css' rel='stylesheet' />
-    <script media="print" src='./../../dist/style/' defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script media="print" src='./../../dist/js/absencesApp.js' defer></script>
 </head>
 
 <body>
@@ -38,18 +40,9 @@
         </div>
     </nav>
     <section class="section">
-        <div class="grid-container">
-            <div class="grid-item">1</div>
-            <div class="grid-item">2</div>
-            <div class="grid-item">3</div>
-            <div class="grid-item">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
-            <div class="grid-item">7</div>
-            <div class="grid-item">8</div>
-            <div class="grid-item">9</div>
-        </div>
+        <div id="jsGrid"></div>
     </section>
 </body>
+
 
 </html>
