Add title in absences page

--- a/src/html/absences.html
+++ b/src/html/absences.html
@@ -40,7 +40,12 @@
         </div>
     </nav>
     <section class="section">
-        <div id="jsGrid"></div>
+        <div class="content">
+            <h2>Physique</h2>
+            <h3>Vendredi</h3>
+            <i>5 novembre 2021</i>
+        </div>
+        <div id="jsGrid" class="content"></div>
     </section>
 </body>
 
