Update Calendar link on hamburger

--- a/src/html/absences.html
+++ b/src/html/absences.html
@@ -28,7 +28,7 @@
                     <div class="square"><a href="#"><b>MY CPNV</b></a></div>
                     <br>
                     <ul>
-                        <li><i class="far fa-calendar"></i><a href="#">Calendriers</a></li>
+                        <li><i class="far fa-calendar"></i><a href="/">Calendriers</a></li>
                         <li><i class="fas fa-info-circle"></i><a href="#">Informations</a></li>
                         <li><i class="far fa-file-alt"></i><a href="#">Documents</a></li>
                         <li><i class="fas fa-list-ol"></i><a href="#">Listes</a></li>
