Create manifest and sw file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href='./dist/style/mainApp.css' rel='stylesheet' />
   <script media="print" src='./dist/js/mainApp.js' defer></script>
+  <link rel="manifest" href="./manifest.json">
+  <link rel="icon" href="/src/images/calendar.png">
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./sw.js', { scope: './' })
+    }
+  </script>
 </head>
 
 <body>
