--- a/src/html/absences.html
+++ b/src/html/absences.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>GUI1</title>
+    <title>Calendar Panel</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href='./../../dist/style/absencesApp.css' rel='stylesheet' />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
     <script media="print" src='./../../dist/js/absencesApp.js' defer></script>
+    <link rel="icon" href="./../images/calendar.png">
 </head>
 
 <body>
