Update hamburger menu

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
           <h1>Anthony Bouillant</h1>
         </div>
         <div class="menu-items">
-          <div class="square"><a href="#"><b>MY CPNV</b></a></div>
-          <br>
+          <div class="square">
+            <a href="#" class="button">MY CPNV</a>
+          </div>
           <ul>
             <li><i class="far fa-calendar"></i><a href="/">Calendriers</a></li>
             <li><i class="fas fa-info-circle"></i><a href="#">Informations</a></li>
